# afriksud

./: .env.example  ACQUISITION_LOG.md  AGENTS.md  APPS_BUILD.md  README.md  SEO_PLAYBOOK_SA_2026.md  assetlinks.json  middleware.ts  next.config.js  package.json  pnpm-lock.yaml  twa-manifest.json
app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
app/[locale]/: layout.tsx  page.tsx
app/install-iptv-[device]/: page.tsx
app/iptv-[city]/: page.tsx
app/iptv-[sport]/: page.tsx
app/iptv-vs-[competitor]/: page.tsx
components/client/: ChannelExplorer.tsx  CinematicIntro.tsx  CinematicIntroController.tsx  CountriesSection.tsx  DstvSavingsCalculator.tsx  HeaderNav.tsx  InternationalSection.tsx  LanguageProvider.tsx  LeratoChat.tsx  LiveActivity.tsx  LocaleSwitcher.tsx  LocaleSync.tsx  LocalizedSections.tsx  LongformShell.tsx  PWABar.tsx  PopiaConsentBanner.tsx  SkipLink.tsx  StickyBottomCta.tsx  StickyMobileCta.tsx  WhatsAppFab.tsx
components/seo/: AuthorBio.tsx  DirectAnswerBlock.tsx  HubListing.tsx  InlinePricingBlock.tsx  InternalLinkHub.tsx  PillarTemplate.tsx  PricingCtaBlock.tsx  TrustReversalBlock.tsx
components/shared/: MzansiLogo.tsx  countries.ts  dict.ts  plans.ts  site.ts  types.ts  utils.ts
components/ux/: BottomTabBar.tsx  FreeTrialSheet.tsx  HeroV2.tsx  HorizontalRow.tsx  (+7 more)
content/: keyword-matrix.json  programmatic-pages.ts
lib/: locales.ts  url.ts
public/: llms.txt  manifest.json  manifest.webmanifest  sw.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: lib.rs  main.rs
(+54 files in other folders)
